--- a/env.example
+++ b/env.example
@@ -2,3 +2,12 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cGVyZmVjdC12ZXJ2ZXQtNDEuY2xlcmsuYWNjb3
 CLERK_SECRET_KEY=sk_test_5qosSBxXjkvB9t1GA97SfZoIPUHQL5ePvHgDH4xGsJ
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+POSTGRES_URL="postgres://default:o7Mwvis8ALqX@ep-white-band-a2u522q2-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:o7Mwvis8ALqX@ep-white-band-a2u522q2-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:o7Mwvis8ALqX@ep-white-band-a2u522q2-pooler.eu-central-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:o7Mwvis8ALqX@ep-white-band-a2u522q2.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-white-band-a2u522q2-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="o7Mwvis8ALqX"
+POSTGRES_DATABASE="verceldb"
+WEBHOOK_SECRET='fuck'
