--- a/env.example
+++ b/env.example
@@ -10,4 +10,7 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-white-band-a2u522q2-pooler.eu-central-1.aws.neon.tech"
 POSTGRES_PASSWORD="o7Mwvis8ALqX"
 POSTGRES_DATABASE="verceldb"
-WEBHOOK_SECRET='fuck'
+WEBHOOK_SECRET=whsec_IiSe1IvsJscdjRC3UHAzDypKtZI1gief
+NEXT_PUBLIC_CLOUDINARY_API_KEY=379983639342593
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dgqcnikjw
+CLOUDINARY_API_SECRET=QC314SaOJNFo0Xbij_lh6r8wyZA
